--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,12 @@ html {
 	font-size: 62.5%;
 }
 
+:root {
+	--skeletonLight: rgba(128, 122, 122, 0.233);
+	--skeletonDark: rgb(163, 159, 159);
+	--fontColor: rgb(34, 33, 33);
+}
+
 *,
 *::after,
 *::before {
@@ -9,11 +15,7 @@ html {
 	padding: 0;
 	font-size: 1.6rem;
 	font-family: "Josefin Sans", sans-serif;
+	color: var(--fontColor);
 	list-style: none;
 	box-sizing: border-box;
-}
-
-:root {
-	--skeletonLight: rgba(128, 122, 122, 0.233);
-	--skeletonDark: rgb(163, 159, 159);
 }
