--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,43 @@ html {
 	--skeletonLight: rgba(128, 122, 122, 0.233);
 	--skeletonDark: rgb(163, 159, 159);
 	--fontColor: rgb(34, 33, 33);
+	--shadowColor: rgba(209, 203, 203, 0.589);
+	--grass: rgb(113, 193, 50);
+	--lightGrass: rgba(112, 193, 50, 0.323);
+	--fire: rgb(239, 127, 60);
+	--lightFire: rgb(247, 195, 183);
+	--water: rgb(104, 144, 240);
+	--lightWater: rgb(194, 202, 248);
+	--bug: rgb(168, 184, 32);
+	--lightBug: rgba(169, 184, 32, 0.46);
+	--normal: rgb(169, 168, 120);
+	--lightNormal: rgb(230, 229, 185);
+	--electric: rgb(249, 210, 54);
+	--lightElectric: rgb(250, 236, 175);
+	--ground: rgb(226, 193, 104);
+	--lightGround: rgb(252, 235, 188);
+	--fight: rgb(192, 55, 49);
+	--lightFight: rgb(245, 177, 174);
+	--poison: rgb(165, 80, 165);
+	--lightPoison: rgb(221, 183, 252);
+	--psychic: rgb(234, 84, 134);
+	--lightPsychic: rgb(255, 211, 226);
+	--ice: rgb(152, 217, 217);
+	--lightIce: rgba(196, 248, 248, 0.918);
+	--rock: rgb(184, 159, 56);
+	--lightRock: rgba(184, 158, 56, 0.493);
+	--dragon: rgb(120, 109, 248);
+	--lightDragon: rgba(121, 109, 248, 0.527);
+	--fairy: rgb(206, 164, 208);
+	--lightFairy: rgba(206, 164, 208, 0.418);
+	--dark: rgb(111, 87, 71);
+	--lightDark: rgba(111, 87, 71, 0.453);
+	--ghost: rgb(113, 87, 153);
+	--lightGhost: rgba(113, 87, 153, 0.432);
+	--steel: rgb(113, 87, 153);
+	--lightSteel: rgba(113, 87, 153, 0.418);
+	--flying: rgb(169, 144, 241);
+	--lightFlying: rgba(168, 144, 241, 0.493);
 }
 
 *,
