--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -10,6 +10,7 @@
 	border-radius: 10px;
 	box-shadow: 5px 5px 10px var(--shadowColor);
 	overflow-y: visible;
+	animation: Fade 0.5s ease-in-out;
 }
 
 .ImageContainer {
@@ -25,7 +26,9 @@
 
 .CardSprite {
 	width: 120px;
+	min-width: 120px;
 	height: 120px;
+	min-height: 120px;
 	position: absolute;
 	transform: translateY(-20%);
 	filter: drop-shadow(4px 2px 3px gray);
@@ -56,7 +59,16 @@
 	margin-right: 10px;
 }
 
-/* card color variants */
+@keyframes Fade {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+/* card color variants ---------------------------------*/
 .Card.grass {
 	background-color: var(--lightGrass);
 }
