--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,6 +5,7 @@
 .CardsSection {
 	width: min(100%, 1000px);
 	height: 100%;
+	min-height: 100vh;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(min(30vw, 150px), 1fr));
 	grid-template-rows: auto;
