--- a/src/styles/Pagination.css
+++ b/src/styles/Pagination.css
@@ -13,12 +13,13 @@
 	height: 60%;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 	margin: 0 20px;
 }
 
 .paginationButton {
 	flex: 1;
+	max-width: 40px;
 	height: 100%;
 	border-radius: 5px;
 	list-style: none;
