--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -10,6 +10,21 @@
 	border-radius: 10px;
 	box-shadow: 5px 5px 10px var(--shadowColor);
 	overflow-y: visible;
+	cursor: pointer;
+	will-change: transform;
+	transition: transform 0.5s ease-in-out;
+}
+
+@media (hover: hover) {
+	.Card:hover {
+		transform: scale(1.1);
+	}
+}
+
+.CardLink {
+	text-decoration: none;
+	width: 100%;
+	height: 100%;
 }
 
 .ImageContainer {
