--- a/src/styles/Pagination.css
+++ b/src/styles/Pagination.css
@@ -19,7 +19,7 @@
 
 .paginationButton {
 	flex: 1;
-	max-width: 40px;
+	/* max-width: 40px; */
 	height: 100%;
 	border-radius: 5px;
 	list-style: none;
