--- a/src/styles/CardSkeleton.css
+++ b/src/styles/CardSkeleton.css
@@ -66,12 +66,9 @@
 	border-radius: 10px;
 }
 
-@keyframes fadeInOut {
-	0%,
-	100% {
-		opacity: 0.6;
-	}
-	50% {
-		opacity: 1;
-	}
+.DetailsSkeletonText {
+	width: 100%;
+	height: 70px;
+	border-radius: 5px;
+	background-color: var(--skeletonDark);
 }
