created the badge component for the pokemon types and used it in the card and details components

--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -64,6 +64,13 @@
 	margin: 10px 0 5px;
 }
 
+.DetailsPokemonTypes {
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
 .DetailsText {
 	font-size: clamp(1.6rem, 1.7rem, 1.8rem);
 }
