--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,6 +66,15 @@ body {
 	box-sizing: border-box;
 }
 
+.ErrorText {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2rem;
+}
+
 /* skeleton animation */
 @keyframes fadeInOut {
 	0% {
