--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,8 +2,9 @@
 	width: 100%;
 	height: 100px;
 	display: flex;
-	align-items: flex-end;
-	justify-content: flex-start;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
 	padding: 20px 0;
 	margin-bottom: 20px;
 	/* box-shadow: 0px 5px 10px gray; */
