--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,10 +6,11 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px 0;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 	/* box-shadow: 0px 5px 10px gray; */
 }
 
 .HeaderTitle {
 	font-size: 4rem;
+	margin-right: 20px;
 }
